--- a/public/bower.json
+++ b/public/bower.json
@@ -10,6 +10,11 @@
     "angular-mocks": "~1.3.0",
     "bootstrap": "~3.1.1",
     "angular-route": "~1.3.0",
-    "angular-resource": "~1.3.0"
+    "angular-resource": "~1.3.0",
+    "jquery": "~2.1.1",
+    "angular-animate": "~1.3.0"
+  },
+  "resolutions": {
+    "angular": "1.3.14"
   }
 }
